compiler-skeleton/tests/compile-error/comp_if.ln
a:bool;
b:bool;
c:int;
d:int;

if d ; 

if c <= d 	
	n:int;
else{
	n:int;
}